--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -13,11 +13,22 @@
             <RadioButton Margin="5" Click="DecRadio">Decode</RadioButton>
             <CheckBox Margin="5" Name="URLCek" IsEnabled="False">Is URL?</CheckBox>
         </StackPanel>
-        <TextBox Margin="5" Name="InBox" MinWidth="550" MinHeight="150" Text="Input" UseLayoutRounding="False" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto" TextWrapping="Wrap" AutomationProperties.IsRequiredForForm="True" AutoWordSelection="True"></TextBox>
+        <TextBox Margin="10,5,10,5" Name="InBox" MinWidth="550" MinHeight="150" Text="Input" UseLayoutRounding="False" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto" TextWrapping="Wrap" AutomationProperties.IsRequiredForForm="True" AutoWordSelection="True">
+            <TextBox.Effect>
+                <DropShadowEffect/>
+            </TextBox.Effect>
+        </TextBox>
         <Button Margin="5" Name="ConvertButton" MinWidth="45" MinHeight="18" Click="ConvertRun" UseLayoutRounding="False">
+            <Button.Effect>
+                <DropShadowEffect/>
+            </Button.Effect>
             <Button.HorizontalAlignment>Center</Button.HorizontalAlignment>
             <Button.Content>Convert</Button.Content>
         </Button>
-        <TextBox Margin="5" Name="OutBox" MinWidth="550" MinHeight="150" Text="Output" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto" TextWrapping="Wrap" AutoWordSelection="True"></TextBox>
+        <TextBox Margin="10, 5, 10, 5" Name="OutBox" MinWidth="550" MinHeight="150" Text="Output" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto" TextWrapping="Wrap" AutoWordSelection="True">
+            <TextBox.Effect>
+                <DropShadowEffect/>
+            </TextBox.Effect>
+        </TextBox>
     </StackPanel>
 </Window>
